--- a/App_LocalResources/Chronopost.ascx.fr-FR.resx
+++ b/App_LocalResources/Chronopost.ascx.fr-FR.resx
@@ -156,9 +156,6 @@
   <data name="productcodelist.data" xml:space="preserve">
     <value>Chronopost 13,Chronopost 24h,Chronopost Relais,Chronopost Express International,Chronopost Classic International,Chronofresh</value>
   </data>
-  <data name="productcodelist.datavalue" xml:space="preserve">
-    <value>1,2,86,17,44,2R</value>
-  </data>
   <data name="Description.Text" xml:space="preserve">
     <value>
     &lt;div class="chronopostitem"&gt;&lt;strong&gt;&lt;img src="/DesktopModules/NBright/OS_Chronopost/Themes/config/img/chrono24.png" /&gt;Chronopost - Livraison express à domicile&lt;/strong&gt;&lt;br /&gt;Colis livré le lendemain matin avant 13h à votre domicile. La veille de la livraison, vous êtes averti par e-mail et SMS.&lt;/div&gt;
@@ -206,5 +203,8 @@ $('input[id*="_cmdOrder_"]').hide();
 });
 &lt;/script&gt;
 </value>
+  </data>
+  <data name="productcodelist.datavalue" xml:space="preserve">
+    <value>1S,2,86,17,44,2R</value>
   </data>
 </root>
