--- a/App_LocalResources/Chronopost.ascx.fr-FR.resx
+++ b/App_LocalResources/Chronopost.ascx.fr-FR.resx
@@ -207,4 +207,16 @@ $('input[id*="_cmdOrder_"]').hide();
   <data name="productcodelist.datavalue" xml:space="preserve">
     <value>1S,2,86,17,44,2R</value>
   </data>
+  <data name="selectrelais.Text" xml:space="preserve">
+    <value>Veuillez sélectionner un point relais :</value>
+  </data>
+  <data name="chronofreshonly.Text" xml:space="preserve">
+    <value>Vous avez des produits frais dans votre panier, nous vous assurons une livraison parfaite avec Chronofresh par Chronopost.</value>
+  </data>
+  <data name="chronopost.Text" xml:space="preserve">
+    <value>Chronopost</value>
+  </data>
+  <data name="chronopostfresh.Text" xml:space="preserve">
+    <value>Chronofresh</value>
+  </data>
 </root>
